<resources>
    <string name="app_name">Easykit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="registro">Registro</string>
    <string name="ingreso">Ingreso</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo Electronico</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="cambiarFotoPerfil">Cambiar foto de perfil</string>
    <string name="nuevaContrasenna">Nueva Contraseña</string>
    <string name="confirmarContrasenna">Confirmar Contraseña</string>
    <string name="gato">Foto de gato</string>
    <string name="logo">Foto de logo</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="buscar">Buscar </string>
    <string name="venta">Venta</string>
    <string name="actualizar">Actualizar</string>
    <string name="name">Nombre del producto</string>
    <string name="name2">Kit escolar</string>
    <string name="button">Publicar</string>
    <string name="buttonGuardar">Guardar</string>3
    <string name="buttonCancelar">Cancelar</string>
    <string name="buttonRegresar">Regresar</string>
    <string name="buttonQuitar">Quitar foto</string>
    <string name="hint">Nombre</string>
    <string name="hint2">Descripción</string>
    <string name="description">Descripción del producto</string>
    <string name="description2">Kit escolar perfecto para colegio</string>
    <string name="precio">Precio: </string>
    <string name="precio2">COP $ </string>
    <string name="precio3">COP $35.000 </string>
    <string name="foto">Tomar foto</string>
    <string name="galeria">Elegir foto</string>
    <string name="ciudad">Bogotá D.C.</string>
    <string name="ubicacion">Ubicación</string>
    <string name="textUbicacion">Encuéntranos!</string>
    <string name="textUbicacion2">Aquí podrás encontrar nuestras tiendas con disponibilidad del producto que buscas.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="TituloKit">PRÁCTICO. PVP $18K</string>
    <string name="BtnPDC">Comprar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_del_producto">NOMBRE DEL PRODUCTO</string>
    <string name="cu_ntas_estrellas_le_dar_as">¿Cuántas estrellas le darías?</string>
    <string name="c_mo_fue_la_atenci_n_recibida">¿Cómo fue la atención recibida?</string>
    <string name="mala">Mala</string>
    <string name="regular">Regular</string>
    <string name="buena">Buena</string>
    <string name="kit_escolar">Kit Escolar</string>
    <string name="anterior">Anterior</string>
    <string name="kit_marcadores">Kit Marcadores</string>
    <string name="tema_colegio">Tema: Colegio</string>
    <string name="siguiente">Siguiente</string>
    <string name="precio_35_000">Precio: $35.000</string>
    <string name="tema_manualidades">Tema: Manualidades</string>
    <string name="precio_45_500">Precio: $45.500</string>
    <string name="precio_55_000">Precio: $55.000</string>
    <string name="colegio">Colegio</string>
    <string name="manualidades">Manualidades</string>
    <string name="navide_o">Navideño</string>
    <string name="halloween">Halloween</string>
    <string name="verano">Verano</string>
    <string name="continuar">continuar</string>
    <string name="cancelar">cancelar</string>
    <string name="title_activity_ubicacion_pedido">UbicacionPedidoActivity</string>
</resources>