<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".IngresoActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:clickable="false"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/BRegistroIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/divider16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/BIngresoIngreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:onClick="ingreso"
        android:text="@string/ingreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider17"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.3" />

    <Button
        android:id="@+id/BRegistroIngreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:onClick="registro"
        android:text="@string/registro"
        app:layout_constraintBottom_toTopOf="@+id/BIngresoIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider18"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1" />


</LinearLayout>